2000-02-10  Harlan Stenn  <stenn@whimsy.udel.edu>

	* scripts/Makefile.am (noinst_SCRIPTS): Addede ntp-wait

	* configure.in: Get the path to perl
	(AC_CONFIG_*): Added scripts/ntp-wait

	* ntptrace/ntptrace.c (DoTrace): If the server's srcadr is 0.0.0.0
	then we haven't synced yet.  Note and punt.
	Reported by: Bdale Garbee <bdale@gag.com>,http://bugs.debian.org/56551

2000-02-09  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ports/winnt/include/config.h: Typo (CLOCK_PALISADE comment)
	From: Carl Byington <carl@five-ten-sg.com>

	* configure.in: Disable kernel_fll_bug for Generic_105181-17 under
	Solaris-2.6
	From: Juergen Georgi <georgi@belwue.de>

2000-02-07  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.99d

	* html/Oncore-SHMEM.htm: New document
	* html/driver30.htm: Cleanup and improvements
	From: Reg Clemens <reg@dwf.com>

2000-01-30  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpd/refclock_oncore.c: Patches/improvements
	From: Reg Clemens <reg@dwf.com>
	
2000-01-29  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.99c

2000-01-28  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: Autoconf update...

	* ntpdate/ntpdate.c (ntpdatemain): Typo
	From: Jack Bryans <jbryans@csulb.edu>

	* Makefile.am (EXTRA_DIST): Add flock-build.  Probably UDel specific...

2000-01-23  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpd/check_y2k.c (main): Reformat for ansi2knr

	* configure.in (AC_OUTPUT): Revert to obsolete form until automake
	catches up.

2000-01-22  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: Use AC_CHECK_TYPES((s_char)) instead of
	AC_CHECK_TYPE.
	(ac_cv_var_kernel_fll_bug): Generic_106541-08 is apparently OK, too.

	* scripts/Makefile.am (EXTRA_DIST): Need to explicitly distribute
	mkver.in and ntpver.in now, apparently.
	* configure.in: Search for the various audio_info members so the
	printing in audio_show is less of a circus.  This required an
	autoconf upgrade.  Major sigh.
