@@ -1,1 +1,1 @@
-noinst_SCRIPTS = mkver ntp-wait ntpver
+noinst_SCRIPTS = calc_tickadj checktime freq_adj mkver ntp-wait ntpsweep ntpver plot_summary summary
