@@ -1,9 +1,10 @@
 #!/bin/sh
 #
 # This script can be used to kill and restart the NTP daemon. Edit the
-# /usr/local/bin/xntpd line to fit.
+# /usr/local/bin/ntpd line to fit.
 #
-kill -INT `ps -ax | egrep "xntpd" | egrep -v "egrep" | sed 's/^\([ 0-9]*\) .*/\1'/`
+kill -INT `ps -ax | egrep "ntpd" | egrep -v "egrep" | sed 's/^\([ 0-9]*\) .*/\1'/`
 sleep 10
-/usr/local/bin/xntpd
+/usr/local/bin/ntpd -g
+/usr/local/bin/ntp-wait
 exit 0
