@@ -1,4 +1,4 @@
-#!/usr/local/bin/perl -w
+#! @PATH_PERL@ -w
 #
 # $Id$
 #
