@@ -1,4 +1,4 @@
-#!/usr/bin/perl -w
+#! @PATH_PERL@ -w
 # $Id$
 # Perl version of (summary.sh, loop.awk, peer.awk):
 # Create summaries from xntpd's loop and peer statistics.
