@@ -1,6 +1,11 @@
 2000-02-10  Harlan Stenn  <stenn@whimsy.udel.edu>
 
-	* scripts/Makefile.am (noinst_SCRIPTS): Addede ntp-wait
+	* scripts/ntp-restart: It's ntpd now.  Also, call ntp-wait.
+
+	* configure.in (AC_CONFIG_*): New scripts that use PATH_PERL
+
+	* scripts/Makefile.am (noinst_SCRIPTS): Added ntp-wait
+	(noinst_SCRIPTS): Added all of the scripts that now use PATH_PERL
 
 	* configure.in: Get the path to perl
 	(AC_CONFIG_*): Added scripts/ntp-wait
